--- a/css/hist_client.css
+++ b/css/hist_client.css
@@ -4,6 +4,7 @@ body {
     font-family: Poppins, sans-serif;
 }
 
+
 .sidebar-wrapper {
     position: relative;
     width: 260px;
@@ -11,9 +12,11 @@ body {
     transition: width 0.3s ease-in-out;
 }
 
+
 .sidebar-wrapper:hover {
     width: 260px;
 }
+
 
 .sidebar {
     position: absolute;
@@ -25,14 +28,17 @@ body {
     overflow: hidden;
 }
 
+
 .sidebar-wrapper:not(:hover) .sidebar {
     width: 150px;
 }
+
 
 .sidediv {
     padding: 20px;
     margin-top: 30px;
 }
+
 
 .sidebar a {
     text-decoration: none;
@@ -44,6 +50,7 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+
 .sidebar li {
     list-style: none;
     margin-bottom: 70px;
@@ -51,13 +58,16 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
+
 .sidebar-wrapper:not(:hover) .sidebar li {
     font-size: 0;
 }
 
+
 .sidebar-wrapper:not(:hover) .sidebar i {
     font-size: 24px;
 }
+
 
 .sidediv i {
     margin-right: 10px;
@@ -65,9 +75,35 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+
 .sidebar li:hover {
     transform: translateX(10px);
 }
+
+
+.sidebar-wrapper .sidebar li {
+    list-style: none;
+    margin-bottom: 100px;
+    font-size: 21px;
+    transition: transform 0.3s ease-in-out;
+}
+
+
+
+
+.sidebar-wrapper .sidebar li.active {
+    color: white;
+    border-left: 8px solid #ffffff;
+    padding-left: 10px;
+}
+
+
+
+
+ul li:nth-child(4){
+    font-weight: bolder;
+}
+
 
 .top-box {
     position: absolute;
@@ -78,6 +114,7 @@ body {
     background-color: #ffffff;
 }
 
+
 .avatar {
     position: absolute;
     width: 65px;
@@ -87,6 +124,7 @@ body {
     top: 20px;
 }
 
+
 .hist {
     position: absolute;
     font-size: 40px;
@@ -94,6 +132,7 @@ body {
     top: 120px;
     color: #2D55B4;
 }
+
 
 .table {
     position: absolute;
@@ -103,6 +142,7 @@ body {
     background-color: #ffffff;
     font-family: Poppins;
 }
+
 
 .table-content {
     border-collapse: collapse;
