--- a/css/ticket.css
+++ b/css/ticket.css
@@ -3,6 +3,8 @@ html {
 }
 
 
+
+
 #rectangle-2 {
     position: absolute;
     width: 100%;
@@ -10,7 +12,7 @@ html {
     background: white;
     top: 0;
     left: 0;
-    z-index: -2;             
+    z-index: -2;            
 }
 #rectangle-1 {
     position: absolute;
@@ -23,6 +25,8 @@ html {
     box-shadow: 1px 1px 4px rgb(150, 150, 150);
    
 }
+
+
 
 
 body {
@@ -46,9 +50,13 @@ body {
 }
 
 
+
+
 #submit_btn:hover {
     background-color: rgb(57, 96, 230);
 }
+
+
 
 
 label {
@@ -64,6 +72,10 @@ label {
     margin-left: 40px;
     left: 60px;
 }
+
+
+
+
 
 
 
@@ -87,6 +99,10 @@ label {
 
 
 
+
+
+
+
 .title_box::placeholder {
     color: rgb(150, 150, 150);
     z-index: 20;
@@ -94,17 +110,25 @@ label {
 }
 
 
+
+
 .ticket_head{
     position: absolute;
     top: 9em;
 
 
+
+
 }
+
+
 
 
 a:hover{
     color: #2D55B4;
 }
+
+
 
 
 textarea {
@@ -128,14 +152,20 @@ textarea {
 }
 
 
+
+
 textarea:focus {
     border-color: #2D55B4;
 }
 
 
+
+
 textarea::placeholder {
     color: rgb(150, 150, 150);
 }
+
+
 
 
 button:hover {
@@ -144,10 +174,14 @@ button:hover {
 }
 
 
+
+
 #fake_textarea:hover {
     background-color: rgb(225, 225, 225);
     border: 1px solid;
 }
+
+
 
 
 h1 {
@@ -162,12 +196,18 @@ h1 {
 
 
 
+
+
+
+
 body {
     background-position: center;
     background-size: cover;
     margin: 0;
     background-color: #EFF2FB;
 }
+
+
 
 
 .top-box{
@@ -178,6 +218,8 @@ body {
     background-color: #ffffff;
     z-index: -1;
 }
+
+
 
 
 .avatar {
@@ -194,12 +236,18 @@ body {
 
 
 
+
+
+
+
   .list_table{
     position: fixed;
     bottom: 500px;
     z-index: 100;
     left: 50%;
   }
+
+
 
 
   .sidebar-wrapper {
@@ -210,9 +258,13 @@ body {
 }
 
 
+
+
 .sidebar-wrapper:hover {
     width: 260px;
 }
+
+
 
 
 .sidebar {
@@ -226,15 +278,21 @@ body {
 }
 
 
+
+
 .sidebar-wrapper:not(:hover) .sidebar {
     width: 150px;
 }
+
+
 
 
 .sidediv {
     padding: 20px;
     margin-top: 30px;
 }
+
+
 
 
 .sidebar a {
@@ -248,6 +306,8 @@ body {
 }
 
 
+
+
 .sidebar li {
     list-style: none;
     margin-bottom: 70px;
@@ -256,14 +316,20 @@ body {
 }
 
 
+
+
 .sidebar-wrapper:not(:hover) .sidebar li {
     font-size: 0;
 }
 
 
+
+
 .sidebar-wrapper:not(:hover) .sidebar i {
     font-size: 24px;
 }
+
+
 
 
 .sidediv i {
@@ -273,9 +339,13 @@ body {
 }
 
 
+
+
 .sidebar li:hover {
     transform: translateX(10px);
 }
+
+
 
 
 .sidebar-wrapper .sidebar li {
@@ -284,6 +354,10 @@ body {
     font-size: 21px;
     transition: transform 0.3s ease-in-out;
 }
+
+
+
+
 
 
 
@@ -300,3 +374,7 @@ body {
 ul li:nth-child(4){
     font-weight: bolder;
 }
+
+
+@media (max-width: 600px){}
+
